# selFIe

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README.md  clean.sh  configure.ac
etc/: selfie_maestro_functions.txt  selfie_mio_functions.txt  selfie_mpi_exclude_functions.txt  selfie_mpi_functions.txt  selfie_mpiio_functions.txt  selfie_posixio_functions.txt
etc/selfie/: selfie.conf
include/: selfie.h  selfie_default.h  selfie_dummy.h  selfie_maestro.h  selfie_mio.h  selfie_mio_types.h  selfie_mpi.h  selfie_mpiio.h  selfie_omp.h  selfie_papi.h  selfie_plugins.h  selfie_posixio.h  selfie_tools.h
src/: Makefile.am  parse_maestro.py  parse_mio.py  parse_mpi.py  parse_posixio.py  selfie.c  selfie_default.c  selfie_dummy.c  selfie_maestro.cpp  selfie_maestro_functions.h  selfie_mio.c  selfie_mio.cpp  selfie_mio_functions.h  selfie_mpi.cpp  selfie_mpiio.cpp  selfie_omp.cpp  selfie_papi.c  selfie_posixio.cpp  selfie_tools.c
test/: Makefile.am  hello.c  hello_omp.c  mio.c  selfie.conf  selfie_genconf.sh.in  selfie_hello.sh.in  selfie_hello_omp.sh.in  selfie_helloconf.sh.in  selfie_hellolog.sh.in  selfie_hellovar.sh.in  selfie_mio.sh.in  selfie_mio_test.c  selfie_mio_test.h
tools/: check-format-style.sh
